--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <h1>🎲 Random số từ 1 đến 6</h1>
-  <button onclick="rollDice()">Quay số</button>
+
+  <input type="text" id="username" placeholder="Nhập tên của bạn" />
+  <button id="rollBtn" onclick="rollDice()">Quay số</button>
+
   <div id="result">Kết quả sẽ hiện ở đây</div>
   <script src="script.js"></script>
 </body>
