--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <input type="text" id="username" placeholder="Nhập tên của bạn" />
   <button id="rollBtn" onclick="rollDice()">Quay số</button>
-
+  <button id="resetBtn" onclick="resetGame()">Chơi lại</button>
   <div id="result">Kết quả sẽ hiện ở đây</div>
   <script src="script.js"></script>
 </body>
